<resources>
    <string name="app_name">AgroMitra</string>
    <string name="welcome_page">Welcome</string>
    <string name="logout_home">Logout</string>
    <string name="username_home">Username</string>
    <string name="component_Soil">Soil Health Card</string>
    <string name="component_Weather">Weather</string>
    <string name="component_Feedback">Feedback</string>
    <string name="component_Query">Query</string>


    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="mpin">mPin</string>
    <string name="confirm_mpin">Confirm mPin</string>

    <string name="phone">Mobile Number</string>
    <string name="user_name">Name</string>
    <string name="adhar">Adhar Card Number</string>
    <string name="login_now">Login Now</string>
    <string name="sgin_up">SignUp Now</string>
    <string name="don_t_remember_password">Forgot password?</string>
    <string name="dont_have_an_account">Don\'t have an account?Signup</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>
    <string name="request_soil_card">Request New Soil Health Crard</string>
    <string name="already_have_an_account">Already have an account?Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="default_location">Fetching Location</string>
    <string name="default_temp">NA</string>
    <string name="change_city_description">Click Here to Change City</string>
    <string name="weather_description">This is the weather symbol</string>
    <string name="back_button_description">Dismiss Change City Screen</string>
    <string name="get_weather">Change City</string>
    <string name="default_query">Enter city name</string>
    <string name="feedback_heading"> We would like your feedback to improve our work</string>
    <string name="feeback_experince">What is your opinion about our work??</string>
    <string name="feedback_category">Please select your feedback categoery below</string>
    <string name="feedback">Please leave your feedback below</string>
    <string name="component_Market_list">Market List</string>

    <string-array name="states">
        <item>Select State</item>
        <item>Andra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerela</item>
        <item>Madya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telagana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

    <string-array name="Andra_Pradesh">
        <item>Select District</item>
        <item>Visakhapatnam</item>
        <item>Chittoor</item>
        <item>Vijaywada</item>
        <item>Amaravati</item>
        <item>Tirupati</item>
        <item>Nagarjuna Sagar</item>
        <item>Nellore</item>
        <item>Nagarjunakonda</item>
        <item>Puttaparthi</item>
        <item>Lepakshi</item>
        <item>Guntur</item>
        <item>Adoni</item>
        <item>Anantapur</item>
        <item>Cuddapah</item>
        <item>Eluru</item>
        <item>Kothagudem</item>
        <item>Kurnool</item>
        <item>Srikakulam</item>
    </string-array>

</resources>
