<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.WeatherShowActivity"
    android:orientation="vertical"
    android:background="@drawable/bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/welcome_text_view"
        android:layout_alignParentTop="true">

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text=   "@string/default_location"
        android:id="@+id/locationTV"
        android:textColor="@color/btn_txt"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="100dp"/>

    <!-- <ImageButton
         android:id="@+id/changeCityButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/welcome_text_view"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"

         android:layout_marginTop="133dp"
         android:layout_marginEnd="0dp"
         android:layout_marginRight="0dp"
         android:background="@null"
         android:contentDescription="@string/change_city_description"
         android:src="@drawable/change_city_symbol_small" />-->

    <TextView
        android:id="@+id/tempTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/locationTV"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="359dp"
        android:layout_marginRight="359dp"
        android:layout_marginBottom="-96dp"
        android:text="@string/default_temp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/btn_txt"
        android:textSize="36sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/weatherSymbolIV"
            android:src="@drawable/dunno"
            android:contentDescription="@string/weather_description"

            />
    </FrameLayout>

    <TextView
        android:id="@+id/textGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_page"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold" />


</RelativeLayout>